Define bin/migrate as a binary file to composer
This file will then be loaded as a binary when this package is included
in other repos with composer.

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,9 @@
             "Turanct\\Migrations\\": "tests"
         }
     },
+    "bin": [
+        "bin/migrate"
+    ],
     "scripts": {
         "test": "phpunit",
         "fix": "php-cs-fixer fix src/ --rules=@PSR2",
