--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,6 @@ before_script:
   - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist
 
 script:
-  - vendor/bin/phpcs --standard=psr2 src/
+  - vendor/bin/php-cs-fixer fix src/ --rules=@PSR2 --dry-run
   - vendor/bin/psalm --show-info=true
   - vendor/bin/phpunit
