--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
     "require-dev": {
         "phpunit/phpunit": "^7.5.20",
         "friendsofphp/php-cs-fixer": "^v2.16.3",
-        "vimeo/psalm": "^3.11.2",
-        "squizlabs/php_codesniffer": "^3.5.5"
+        "vimeo/psalm": "^3.11.2"
     },
     "autoload": {
         "psr-4": {
@@ -45,9 +44,8 @@
     "scripts": {
         "test": "phpunit",
         "fix": "php-cs-fixer fix src/ --rules=@PSR2",
-        "psalm": "psalm --show-info=true",
-        "check-style": "phpcs src tests",
-        "fix-style": "phpcbf src tests"
+        "check-style": "php-cs-fixer fix src/ --rules=@PSR2 --dry-run",
+        "psalm": "psalm --show-info=true"
     },
     "config": {
         "sort-packages": true
