--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,6 @@ dist: trusty
 language: php
 
 php:
-  - 7.1
-  - 7.2
-  - 7.3
   - 7.4
 
 # This triggers builds to run on the new TravisCI infrastructure.
@@ -19,6 +16,10 @@ cache:
 matrix:
   include:
     - php: 7.1
+      env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
+    - php: 7.2
+      env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
+    - php: 7.3
       env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
 
 before_script:
