--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "php": "~7.1",
+        "php": ">=7.1",
         "ext-json": "*",
         "ext-pdo": "*",
         "symfony/finder": "^v4.4.8",
