✅ Make sure we use a phpunit version that works on PHP8 as well

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,9 +13,8 @@ jobs:
         strategy:
             matrix:
                 dependencies:
-                    - "locked"
+                    - "highest"
                 php-version:
-                    - "7.0"
                     - "7.1"
                     - "7.2"
                     - "7.3"
