--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "symfony/console": "^v4.4.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5.20",
+        "phpunit/phpunit": "^7.5.20 || ^9.5.2",
         "friendsofphp/php-cs-fixer": "^v2.16.3",
         "vimeo/psalm": "^3.11.2"
     },
