💅 Prepare for packagist

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "turanct/migraine",
+    "name": "engagor/migraine",
     "type": "library",
     "description": "",
     "keywords": [
