💅 Prepare for packagist

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "database",
         "migrations"
     ],
-    "homepage": "https://github.com/turanct/migraine",
+    "homepage": "https://github.com/engagor/migraine",
     "license": "MIT",
     "authors": [
         {
